--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
@@ -40,6 +40,7 @@
   line-height:10px;
   margin-top:5px;
   margin-bottom:10px;
+  display: block;
 }
 .iconZoomOut, .iconZoomLevel{
   position: relative;
