--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -6,6 +6,7 @@
   {{parent()}}
   {% stylesheets filter="compass,cssrewrite"
     "bundles/mapbendermanager/sass/manager/applications.scss"
+    "bundles/fomuser/sass/user/user_control.scss"
     "bundles/mapbendermanager/sass/element/form.scss"
     "bundles/mapbendermanager/sass/element/yaml.scss"
     "bundles/mapbendermanager/sass/element/button.scss"
