--- a/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
@@ -6,6 +6,7 @@
   {{parent()}}
   {% stylesheets filter="compass,cssrewrite"
     "bundles/mapbendermanager/sass/manager/applications.scss"
+    "bundles/fomuser/sass/user/user_control.scss"
   %}
     <link rel="stylesheet" href="{{ asset_url }}" />
   {% endstylesheets %}
