print dialog fix

--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -28,11 +28,11 @@
             <div>
               <input class="input" type="text" name="scale_text" size="8"/>
             </div>
-            <label class="labelInput" for="rotation">{{ 'mb.core.printclient.label.rotation' | trans }}</label>
-            <input class="input" type="text" name="rotation"/>
-
-            <div id="slider"></div>
-
+            <div>
+                <label class="labelInput" for="rotation">{{ 'mb.core.printclient.label.rotation' | trans }}</label>
+                <input class="input" type="text" name="rotation"/>
+                <div id="slider"></div>
+            </div>
             <div id="extra_fields"></div>
             <div class="clearContainer"></div>
             <br>
