--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
@@ -134,6 +134,6 @@
 .layersetTable{
   tbody tr{cursor:move;}
   .idColumn{width:3%;}
-  .typeColumn{width:7%;} // very ugly, but fixing the scale behaviour by dragging at the moment
+  .typeColumn{width:7%;} // very ugly, but fixing the scale behaviour
   .titleColumn{width: 70%;}
 }
