--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
@@ -1,6 +1,7 @@
 @import "libs/variables";
 @import "libs/mixins";
 @import "libs/icons";
+@import "modules/text";
 
 // ------------------------------------------------------------- SERVICES
 .listFilterInput{
