--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen_alternative.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen_alternative.scss
@@ -1,20 +1,18 @@
 @import "libs/variables";
 @import "libs/mixins";
 
-
-$templateHeight: 800px;
-$templateWidth:960px;
-$headHeight: 120px;
-$sidePaneWidth:280px;
+$topPaneHeight: 70px;
 
 /* -------------------------------------------------------------- LOGO */
 .logoContainer{
-  position: relative;
+  padding:5px $space;
+  height:$topPaneHeight;
+  width: 100%;
   z-index: 10;
-  display: inline-block;
-  padding:$space;
-  height:$headHeight;
-  background:none;
+  @include absolute(0 0 '' 0);
+  @include box-shadow(0px 0px 3px black);
+
+  img{height:60px;}
 }
 
 
@@ -24,24 +22,21 @@ $sidePaneWidth:280px;
 /* ---------------------------------------------------------- CONTENT */
 .templateWrapper{
   margin:0 auto;
-  width:$templateWidth;
-  height:$templateHeight;
-  position:relative;
+  @include absolute(0 0 0 0);
 }
 .contentPane{
-  height:700px;
-  border-right:1px solid darken(white, 30%);
-  @include absolute($headHeight 0 '' 0);
-  @include transition(all 0.3s linear);
+  width:100%;
+  height:100%;
+  @include absolute(0 '' '' 0);
   .left-top, .right-top, .left-bottom, .right-bottom{z-index: 1;}
 
   /* Positioning */
-  .left-top{@include absolute($space*4 '' '' $space);}
-  .right-top{@include absolute($space*4 $space '' '');}
+  .left-top{@include absolute($space*7 '' '' $space);}
+  .right-top{@include absolute($space*7 $space '' '');}
   .left-bottom{@include absolute('' '' $space*3 $space);}
   .right-bottom{@include absolute('' $space $space*3 '');}
 }
-.sidePaneOpened .contentPane{left:$sidePaneWidth;}
+
 
 
 
@@ -49,10 +44,11 @@ $sidePaneWidth:280px;
 /* --------------------------------------------------------- TOOLBARS */
 .toolBar{
   z-index:4;
-  &.top{@include absolute($headHeight 0 '' 0);}
-  &.bottom{@include absolute('' 0 (-$space) 0);}
+  &.top{
+    @include pos($topPaneHeight,0,'',0);
+  }
+  &.bottom{@include absolute('' 0 0 0);}
 }
-.sidePaneOpened .toolBar{left:$sidePaneWidth;}
 
 
 
@@ -64,12 +60,10 @@ $tabSize:32px;
   width: $tabSize;
   height: $tabSize;
   @include absolute(40% '' '' '');
-  @include transition(all 0.3s linear);
+  @include transition(all 0.3s ease-in-out);
 }
 .sidePane{
   width:10px;
-  height:($templateHeight - $headHeight) + $space;
-  border-left:1px solid darken(white, 30%);
   z-index:20;
 
   &.notCollapsable{
@@ -77,9 +71,13 @@ $tabSize:32px;
   }
 
   &.left{
-    @include absolute(120px '' $space*3 0);
+    @include absolute($topPaneHeight + $space*2 '' $space*2 0);
     .sidePaneTabs{right:-$tabSize;}
+  }
+  &.right{
+    @include absolute($topPaneHeight 0 0 '');
+    .sidePaneTabs{left:-$tabSize;}
   }
   .sideContent{@include stretch();}
 }
-.sidePaneOpened .sidePane{width:$sidePaneWidth;}
+.sidePaneOpened .sidePane{width:350px;}
