layertree menu hidde transparency

--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -1,5 +1,5 @@
-<div id="{{ id }}" class="mb-element mb-element-layertree" title="{{ title |trans }}">
-  <li class="hide-elm leave showLeaves" data-state="" data-title="">
+<div id="{{ id }}" class="mb-element mb-element-layertree hidden" title="{{ title |trans }}">
+  <li class="hidden leave showLeaves" data-state="" data-title="">
     <div class="leaveContainer">
       <span class="layer-spinner"></span>
       <span class="layer-state"></span>
@@ -13,10 +13,10 @@
       <span class="layer-title labelCheck"></span>
       {% if configuration.menu != null and configuration.menu | length > 0 %}
       <span class="layer-menu-btn">&#9776;
-        <div id="layer-menu" class="layer-menu">
+        <div id="layer-menu" class="layer-menu hidden">
         {% for item in configuration.menu %}
           {% if item == 'opacity' %}
-          <span class="labelInput">{{ "mb.core.layertree.label.transparency"|trans }}:</span>
+          <span id="layer-opacity-title" class="labelInput">{{ "mb.core.layertree.label.transparency"|trans }}:</span>
           <div id="layer-opacity" class="layer-opacity-bar">
               <div class="layer-opacity-handle">100</div>
           </div>
