layertree menu changed

--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -21,9 +21,9 @@
               <div class="layer-opacity-handle">100</div>
           </div>
           {% elseif item == 'zoomtolayer' %}
-          <span class="layer-zoom span-btn inactive">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</span>
+          <span class="layer-zoom span-btn labelInput inactive">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</span>
           {% else %}
-          <span class="layer span-btn inactive">Undefined</span>
+          <span class="layer span-btn labelInput inactive">Undefined</span>
           {% endif %}
         {% endfor %}
         </div>
