--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/search_router.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/search_router.html.twig
@@ -8,4 +8,9 @@
     {{ form_label(form.configuration.timeout) }}{{ form_widget(form.configuration.timeout) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.routes) }}{{ form_widget(form.configuration.routes) }}
+
+    {#-
+    <script src="{{ asset('bundles/mapbendermanager/codemirror2/lib/codemirror.js') }}"></script>
+    <script src="{{ asset('bundles/mapbendermanager/codemirror2/mode/yaml/yaml.js') }}"></script>
+    <script src="{{ asset('bundles/mapbendercore/admin/searchrouter.js') }}"></script> -#}
 </div>
