print error message required fields

--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.json.twig
@@ -1,5 +1,6 @@
 {
 "mb.core.printclient.popup.btn.ok": "{{ "mb.core.printclient.popup.btn.ok" | trans}}",
 "mb.core.printclient.popup.btn.cancel": "{{ "mb.core.printclient.popup.btn.cancel" | trans}}",
-"mb.core.printclient.info.noactivelayer": "{{ "mb.core.printclient.info.noactivelayer" | trans}}"
+"mb.core.printclient.info.noactivelayer": "{{ "mb.core.printclient.info.noactivelayer" | trans}}",
+"mb.core.printclient.form.required": "{{ "mb.core.printclient.form.required" | trans}}"
 }
