zoom to layer button designed

--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -21,7 +21,7 @@
               <div class="layer-opacity-handle">100</div>
           </div>
           {% elseif item == 'zoomtolayer' %}
-          <span class="layer-zoom span-btn labelInput inactive">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</span>
+          <div class="layer-zoom span-btn inactive button buttonOk">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</div>
           {% else %}
           <span class="layer span-btn labelInput inactive">Undefined</span>
           {% endif %}
