SimpleSearch - Added query format configuration

--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
@@ -5,6 +5,8 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.query_key) }}{{ form_widget(form.configuration.query_key) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.query_format) }}{{ form_widget(form.configuration.query_format) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.collection_path) }}{{ form_widget(form.configuration.collection_path) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.label_attribute) }}{{ form_widget(form.configuration.label_attribute) }}
