--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
@@ -17,4 +17,10 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.delay) }}{{ form_widget(form.configuration.delay) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.result_buffer) }}{{ form_widget(form.configuration.result_buffer) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.result_minscale) }}{{ form_widget(form.configuration.result_minscale) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.result_maxscale) }}{{ form_widget(form.configuration.result_maxscale) }}
+    <div class="clearContainer"></div>
 </div>
