--- a/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
@@ -28,13 +28,13 @@
     {% if 'zoom_in_out' in configuration.components or 'zoom_slider' in configuration.components %}
       <li class="zoomSlider">
         {% if 'zoom_in_out' in configuration.components %}
-        <span class="iconZoomIn iconBig"></span>
+        <span class="iconZoomIn iconBig" title="{{ "mb.core.zoombar.zoomin" | trans }}"></span>
         {% endif %}
         {% if 'zoom_slider' in configuration.components %}
         <ul class="zoomSliderLevels"></ul>
         {% endif %}
         {% if 'zoom_in_out' in configuration.components %}
-        <span class="iconZoomOut iconBig"></span>
+        <span class="iconZoomOut iconBig" title="{{ "mb.core.zoombar.zoomout" | trans }}"></span>
         {% endif %}
       </li>
     {% endif %}
