--- a/src/Mapbender/CoreBundle/Resources/views/Element/simplesearch.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/simplesearch.html.twig
@@ -4,6 +4,6 @@
         <div class="autocompleteList"></div>
     </div>
 {% if configuration.delay == 0 %}
-    <input type="submit" value="{{'Search'|trans }}"/>
+    <input type="submit" value="{{'mb.core.simplesearch.input.search'|trans }}"/>
 {% endif %}
 </form>
