--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -11,7 +11,7 @@
         <input class="layer-info checkbox" type="checkbox" name="info"/>
       </div>
       <span class="layer-title labelCheck"></span>
-      {% if configuration.menu != null and configuration.menu | length > 0 %}
+      {% if configuration.menu is defined and configuration.menu != null and configuration.menu | length > 0 %}
       <span class="layer-menu-btn">&#9776;
         <div id="layer-menu" class="layer-menu hidden">
         {% for item in configuration.menu %}
