legend close button translation

--- a/src/Mapbender/CoreBundle/Resources/views/Element/legend.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/legend.json.twig
@@ -1,3 +1,4 @@
 {
-"mb.core.legend.nolegend": "{{ "mb.core.legend.nolegend" | trans}}"
+"mb.core.legend.nolegend": "{{ "mb.core.legend.nolegend" | trans}}",
+"mb.core.legend.popup.btn.ok": "{{ "mb.core.legend.popup.btn.ok" | trans }}" 
 }
