SimpleSearch: Display configurable marker
- Closes #186
- Closes #185

--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
@@ -23,4 +23,8 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.result_maxscale) }}{{ form_widget(form.configuration.result_maxscale) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.result_icon_url) }}{{ form_widget(form.configuration.result_icon_url) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.result_icon_offset) }}{{ form_widget(form.configuration.result_icon_offset) }}
+    <div class="clearContainer"></div>
 </div>
