--- a/application/web/assets/MapbenderCoreBundle__sass__element__map__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__element__map__scss.css
@@ -1,4 +1,4 @@
-/* line 5, assetic_compassM2a1mP.scss */
+/* line 5, assetic_compassaB0Tjy.scss */
 .contentPane .mb-element-map {
   background-color: #f9f9f9;
   width: 100%;
