--- a/application/web/assets/MapbenderCoreBundle__sass__element__printclient__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__element__printclient__scss.css
@@ -1,11 +1,11 @@
-/* line 4, assetic_compassNQH5K0.scss */
+/* line 4, assetic_compass2SHHbA.scss */
 .mb-element-printclient {
   display: none;
   overflow: visible; }
-  /* line 8, assetic_compassNQH5K0.scss */
+  /* line 8, assetic_compass2SHHbA.scss */
   .mb-element-printclient .labelInput {
     width: 60px; }
-  /* line 9, assetic_compassNQH5K0.scss */
+  /* line 9, assetic_compass2SHHbA.scss */
   .mb-element-printclient .input, .mb-element-printclient .dropdown {
     width: 190px;
     margin-bottom: 10px;
