--- a/application/web/assets/MapbenderCoreBundle__sass__element__scalebar__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__element__scalebar__scss.css
@@ -1,8 +1,8 @@
-/* line 4, assetic_compassW8MwOE.scss */
+/* line 4, assetic_compassNPgX0D.scss */
 .mb-element-scaleline {
   text-align: center;
   display: inline-block; }
-  /* line 7, assetic_compassW8MwOE.scss */
+  /* line 7, assetic_compassNPgX0D.scss */
   .mb-element-scaleline .scaleBorder {
     border-left: solid 2px #404040;
     border-right: solid 2px #404040;
@@ -13,11 +13,11 @@
     bottom: 0;
     left: 0; }
 
-/* line 19, assetic_compassW8MwOE.scss */
+/* line 19, assetic_compassNPgX0D.scss */
 .toolBar .mb-element-scaleline {
   position: relative;
   bottom: 5px;
   padding-bottom: 5px; }
-  /* line 23, assetic_compassW8MwOE.scss */
+  /* line 23, assetic_compassNPgX0D.scss */
   .toolBar .mb-element-scaleline .scaleBorder {
     border-color: white; }
