--- a/application/web/assets/MapbenderCoreBundle__sass__template__fullscreen__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__template__fullscreen__scss.css
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------- LOGO */
-/* line 6, assetic_compassJeUFco.scss */
+/* line 6, assetic_compassIdKx1q.scss */
 .logoContainer {
   position: relative;
   z-index: 10;
@@ -10,7 +10,7 @@
   background-color: white; }
 
 /* ---------------------------------------------------------- CONTENT */
-/* line 21, assetic_compassJeUFco.scss */
+/* line 21, assetic_compassIdKx1q.scss */
 .templateWrapper {
   margin: 0 auto;
   position: absolute;
@@ -19,7 +19,7 @@
   bottom: 0;
   left: 0; }
 
-/* line 25, assetic_compassJeUFco.scss */
+/* line 25, assetic_compassIdKx1q.scss */
 .contentPane {
   width: 100%;
   height: 100%;
@@ -27,38 +27,38 @@
   top: 0;
   left: 0;
   /* Positioning */ }
-  /* line 29, assetic_compassJeUFco.scss */
+  /* line 29, assetic_compassIdKx1q.scss */
   .contentPane .left-top, .contentPane .right-top, .contentPane .left-bottom, .contentPane .right-bottom {
     z-index: 1; }
-  /* line 32, assetic_compassJeUFco.scss */
+  /* line 32, assetic_compassIdKx1q.scss */
   .contentPane .left-top {
     position: absolute;
     top: 140px;
     left: 20px; }
-  /* line 33, assetic_compassJeUFco.scss */
+  /* line 33, assetic_compassIdKx1q.scss */
   .contentPane .right-top {
     position: absolute;
     top: 60px;
     right: 20px; }
-  /* line 34, assetic_compassJeUFco.scss */
+  /* line 34, assetic_compassIdKx1q.scss */
   .contentPane .left-bottom {
     position: absolute;
     bottom: 60px;
     left: 20px; }
-  /* line 35, assetic_compassJeUFco.scss */
+  /* line 35, assetic_compassIdKx1q.scss */
   .contentPane .right-bottom {
     position: absolute;
     right: 20px;
     bottom: 60px; }
 
 /* --------------------------------------------------------- TOOLBARS */
-/* line 43, assetic_compassJeUFco.scss */
+/* line 43, assetic_compassIdKx1q.scss */
 .toolBar {
   z-index: 4; }
-  /* line 45, assetic_compassJeUFco.scss */
+  /* line 45, assetic_compassIdKx1q.scss */
   .toolBar.top {
     position: relative; }
-  /* line 46, assetic_compassJeUFco.scss */
+  /* line 46, assetic_compassIdKx1q.scss */
   .toolBar.bottom {
     position: absolute;
     right: 0;
@@ -66,7 +66,7 @@
     left: 0; }
 
 /* --------------------------------------------------------- SIDEPANE */
-/* line 55, assetic_compassJeUFco.scss */
+/* line 55, assetic_compassIdKx1q.scss */
 .sidePaneTabs {
   width: 32px;
   height: 32px;
@@ -77,32 +77,32 @@
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out; }
 
-/* line 61, assetic_compassJeUFco.scss */
+/* line 61, assetic_compassIdKx1q.scss */
 .sidePane {
   width: 10px;
   z-index: 20; }
-  /* line 66, assetic_compassJeUFco.scss */
+  /* line 66, assetic_compassIdKx1q.scss */
   .sidePane.notCollapsable .sidePaneTabs {
     display: none; }
-  /* line 69, assetic_compassJeUFco.scss */
+  /* line 69, assetic_compassIdKx1q.scss */
   .sidePane.left {
     position: absolute;
     top: 120px;
     bottom: 60px;
     left: 0; }
-    /* line 71, assetic_compassJeUFco.scss */
+    /* line 71, assetic_compassIdKx1q.scss */
     .sidePane.left .sidePaneTabs {
       right: -32px; }
-  /* line 73, assetic_compassJeUFco.scss */
+  /* line 73, assetic_compassIdKx1q.scss */
   .sidePane.right {
     position: absolute;
     top: 80px;
     right: 0;
     bottom: 60px; }
-    /* line 75, assetic_compassJeUFco.scss */
+    /* line 75, assetic_compassIdKx1q.scss */
     .sidePane.right .sidePaneTabs {
       left: -32px; }
-  /* line 77, assetic_compassJeUFco.scss */
+  /* line 77, assetic_compassIdKx1q.scss */
   .sidePane .sideContent {
     position: absolute;
     top: 0;
@@ -110,6 +110,6 @@
     left: 0;
     right: 0; }
 
-/* line 79, assetic_compassJeUFco.scss */
+/* line 79, assetic_compassIdKx1q.scss */
 .sidePaneOpened .sidePane {
   width: 350px; }
