Dialog Acl for elements changed

--- a/src/Mapbender/ManagerBundle/Resources/views/components.json.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/components.json.twig
@@ -24,6 +24,11 @@ $.extend(Mapbender.i18n,
 "mb.manager.components.popup.add_instance.btn.cancel": "{{ "mb.manager.components.popup.add_instance.btn.cancel" | trans }}",
 "mb.manager.components.popup.delete_instance.title": "{{ "mb.manager.components.popup.delete_instance.title" | trans }}",
 "mb.manager.components.popup.delete_instance.btn.ok": "{{ "mb.manager.components.popup.delete_instance.btn.ok" | trans }}",
-"mb.manager.components.popup.delete_instance.btn.cancel": "{{ "mb.manager.components.popup.delete_instance.btn.cancel" | trans }}"
+"mb.manager.components.popup.delete_instance.btn.cancel": "{{ "mb.manager.components.popup.delete_instance.btn.cancel" | trans }}",
+"mb.manager.components.popup.element_acl.btn.cancel": "{{ "mb.manager.components.popup.element_acl.btn.cancel" | trans }}",
+"mb.manager.components.popup.element_acl.btn.ok": "{{ "mb.manager.components.popup.element_acl.btn.ok" | trans }}",
+"mb.manager.components.popup.element_acl.btn.add": "{{ "mb.manager.components.popup.element_acl.btn.add" | trans }}",
+"mb.manager.components.popup.element_acl.btn.back": "{{ "mb.manager.components.popup.element_acl.btn.back" | trans }}",
+"mb.manager.components.popup.element_acl.btn.remove": "{{ "mb.manager.components.popup.element_acl.btn.remove" | trans }}"
 }
 );
