--- a/src/Mapbender/ManagerBundle/Resources/views/Element/form-security.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/form-security.html.twig
@@ -1,4 +1,4 @@
-<a id="addPermission" href="{{path('fom_user_acl_overview')}}" class="iconAdd iconBig right" title="{{'Add users and groups'|trans}}"></a>
+<a id="addPermission" href="{{path('fom_user_acl_overview')}}" class="iconAdd iconBig right" title="{{'mb.manager.managerbundle.add_user_group'|trans}}"></a>
 {#{ form_widget(form.enabled) }}<!--label for="{{form.enabled.vars.id}}" class="labelCheck">{{"Publish"|trans}#}<!--/label-->
 <div class="clearContainer"></div>
 {{ form_widget(form.acl) }}
