--- a/src/Mapbender/CoreBundle/Resources/skeleton/element/map-click.php.twig
+++ b/src/Mapbender/CoreBundle/Resources/skeleton/element/map-click.php.twig
@@ -36,6 +36,10 @@ class {{ className }} extends Element {
         );
     }
 
+    public function getWidgetName() {
+        return 'mapbender.mb{{ className }}';
+    }
+
     public function httpAction($action) {
         $response = new Response();
 
