--- a/src/Mapbender/CoreBundle/Resources/skeleton/element/general.php.twig
+++ b/src/Mapbender/CoreBundle/Resources/skeleton/element/general.php.twig
@@ -52,7 +52,7 @@ class {{ className }} extends Element {
     }
 
     public function render() {
-        return $this->get('templating')->render('{{ bundle }}:Element:{{ classNameLower }}.html.twig', array(
+        return $this->container->get('templating')->render('{{ bundle }}:Element:{{ classNameLower }}.html.twig', array(
                 'id' => $this->getId(),
                 'configuration' => $this->entity->getConfiguration(),
                 'title' => $this->getTitle()));
