Fix erroneous comma

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -5,7 +5,7 @@
 {% block css %}
   {{parent()}}
   {% stylesheets filter="compass,cssrewrite"
-    "bundles/mapbendermanager/codemirror2/lib/codemirror.css",
+    "bundles/mapbendermanager/codemirror2/lib/codemirror.css"
     "bundles/mapbendermanager/sass/manager/applications.scss"
     "bundles/fomuser/sass/user/user_control.scss"
     "bundles/mapbendermanager/sass/element/form.scss"
