--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -4,8 +4,8 @@
 
 {% block css %}
   {{parent()}}
+    <link rel="stylesheet" href="{{ asset('bundles/mapbendermanager/codemirror2/lib/codemirror.css') }}"/>
   {% stylesheets filter="compass,cssrewrite"
-    "bundles/mapbendermanager/codemirror2/lib/codemirror.css"
     "bundles/mapbendermanager/sass/manager/applications.scss"
     "bundles/fomuser/sass/user/user_control.scss"
     "bundles/mapbendermanager/sass/element/form.scss"
